--- a/app.json
+++ b/app.json
@@ -79,7 +79,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "HR之家",
     "navigationBarTextStyle": "black"
   },
   "permission": {
