--- a/app.json
+++ b/app.json
@@ -74,7 +74,8 @@
     "pages/answerQuesion/answerQuesion",
     "pages/replay/replay",
     "pages/account/myMessage",
-    "pages/account/applyAnswer"
+    "pages/account/applyAnswer",
+    "pages/authPhone/authPhone"
   ],
   "window": {
     "backgroundTextStyle": "light",
